# Captio

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  amvera.yml  docker-compose.yml  makefile  package-lock.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  makefile  pyproject.toml  requirements.txt
backend-node/: .env  db.js  index.js  init.sql  package-lock.json  package.json
backend-node/middleware/: auth.js
backend-node/routes/: auth.js  tasks.js
backend/src/: __init__.py  database.py  deps.py  helpers.py  languages.py  main.py  model.py  pydantic_models.py  security.py  serializers.py  settings.py
backend/src/routers/: __init__.py  auth.py  tasks.py  videos.py
backend/tests/: conftest.py  test_auth_tasks_api.py  test_fuzz_api.py  test_helpers.py  test_videos_api.py
build-amvera/: Dockerfile
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  config.js  frontend.lnk  i18n.js  index.css  index.js
frontend/src/components/: DialogItem.jsx  DialogItem.module.css  Header.jsx  Header.module.css  Loader.jsx  Loader.module.css  ProtectedRoute.jsx  SubtitleResult.jsx  SubtitleResult.module.css  UploadForm.jsx  UploadForm.module.css
frontend/src/pages/: About.jsx  About.module.css  AdminUsers.jsx  Agreement.jsx  Agreement.module.css  Dialogs.jsx  Dialogs.module.css  History.jsx  Home.jsx  Login.jsx  Login.module.css  Profile.jsx  Status.jsx  Tasks.jsx
frontend/src/redux/: agreementSlice.js  authSlice.js  dialogsSlice.js  store.js  tasksSlice.js
src/: helpers.py  main.py  pydantic_models.py
