[project]
name = "captio"
version = "0.1.0"
description = ""
authors = [
    {name = "hxastur",email = "arz.mikhail@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pytube (>=15.0.0,<16.0.0)",
    "yt-dlp (>=2026.3.17,<2027.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "whisper (>=1.1.10,<2.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "openai-whisper (>=20250625,<20250626)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
